--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -14,6 +14,8 @@ body {
 	grid-column: 1/3;
 	box-shadow: 0px 0px 8px #d8d8d8;
 	z-index: 1;
+	display: grid;
+	grid-template-columns: repeat(4, auto) 1fr auto 1fr auto;
 }
 
 #main_content {
@@ -43,7 +45,7 @@ li.list-tag {
 	color: grey;
 }
 
-li:not (.list-tag ):hover {
+li:not(.list-tag):hover {
 	background-color: #4f1010;
 }
 
@@ -54,7 +56,7 @@ li:not (.list-tag ):hover {
 
 #main_topBar>div {
 	margin: 0;
-	display: inline-block;
+	line-height: 65px;
 }
 
 #main_content>iframe {
@@ -65,6 +67,6 @@ li:not (.list-tag ):hover {
 }
 
 #main_topBar>div:not(:first-child) {
-	padding: 5px;
+	padding: 0px 5px;
 	cursor: default;
 }
