--- a/WebContent/css/grader.css
+++ b/WebContent/css/grader.css
@@ -1,18 +1,36 @@
-.grade_course>div, #grader_header {
+#grader {
 	display: grid;
-	grid-gap: 1px;
-	background-color: grey;
+	height: 50vh;
+	grid-template-columns: 1fr 1fr;
+}
+
+.grade_category, #grader_header {
+	display: grid;
 	grid-template-columns: 30px 100px 60px 70px 40px;
 }
-
-#grader>div>div>div {
+#grader div {
+	border: 0.1px solid grey;
+	/*border-right: 0.2px solid grey;*/
+}
+#grader_header {
+	grid-template-columns: 70px 30px 100px 60px 70px 40px;
+}
+.course_name {
+	grid-row: 1/span 10;
+    line-height: 70px;
+    writing-mode: vertical-rl;
+    text-align: center;
+}
+#grader {
 	font-family: Arial;
 	font-size: 13px;
+
+}
+.number-cell {
 	padding: 4px;
 }
+#grader div {
 
-.grade_course>div:not(#grader_header)>div {
-	background-color: white;
 }
 
 #grader_header>div {
@@ -23,7 +41,7 @@
 }
 
 .grade_category {
-	grid-auto-rows: repeat(3, 20px);
+	grid-template-rows: repeat(3, 20px);
 }
 
 .grade_category>div:nth-child(-n+3) {
@@ -32,8 +50,8 @@
 	line-height: 60px;
 }
 
-#grader_header>div:nth-child(4) {
-	grid-column: 4/span 2;
+#grader_header>div:nth-child(5) {
+	grid-column: 5/span 2;
 }
 
 .grade_category>div:nth-child(2n+5) {
@@ -46,11 +64,6 @@
 }
 
 .grade_course {
-	/*display: flex;*/
-}
-
-#grader {
 	display: grid;
-	grid-auto-columns: auto auto;
-	grid-auto-rows: auto auto;
+	grid-template-columns: 70px auto;
 }
